# desktop

./: .gitignore  BUILDING.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  LockScreen.tsx  PinSetup.tsx  i18n.ts  index.tsx  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: FormattedText.tsx  MediaUpload.tsx  NodeSelector.tsx  Sidebar.tsx  Toolbar.tsx  TxConfirmModal.tsx  VideoAttachment.tsx  WindowControls.tsx
src/i18n/: init.ts
src/i18n/locales/: de.json  en.json  es.json  ja.json  pt.json  ru.json  zh.json
src/lib/: api.ts  appLock.ts  auth.ts  klever.ts  payload.ts  prices.ts  profile.ts  push.ts  router.ts  sanitize.ts  secureStore.ts  settings-sync.ts  settings.ts  share.ts  theme.ts  trayBadge.ts  txConfirm.ts  useCooldown.ts  vault.ts  vaultMigration.ts
src/pages/: ChannelCreateView.tsx  ChannelSettingsView.tsx  ChatView.tsx  ComposeView.tsx  DmConversationView.tsx  NewsDetailView.tsx  NewsView.tsx  SettingsView.tsx  TokenPortfolioView.tsx  WalletView.tsx
src/styles/: design-styles.css  global.css
