[package]
name = "ogmara-desktop"
version = "1.15.2"
edition = "2021"
authors = ["Ogmara Contributors"]
license = "MIT"
description = "Ogmara desktop application"
publish = false

[lib]
name = "ogmara_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6"
ureq = { version = "3", features = ["native-tls"] }
tokio = { version = "1", features = ["rt"] }
